<resources>
    <string name="app_name">XYZ eCommerce</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="feedback">Feedback</string>
    <string name="apply_now">Apply Now</string>
    <string name="offers">Offers</string>
    <string name="near_me">Near Me</string>
    <string name="support">Support</string>
    <string name="faq">FAQs</string>
    <string name="downloads">Downloads</string>

    <!-- details activity menu-->
    <string name="action_logout">Logout</string>
    <string name="action_change_details">Change Information</string>
    <string name="menu_notification_fallback">Notification</string>
    <!--details activity strings-->
    <string name="check_balance">Check Balance</string>
    <string name="view_statement">View Statement</string>
    <string name="make_transaction">Transfer Money</string>

    <!--social login related-->

    <string name="facebook_app_id">466196183759778</string>
    <string name="fb_login_protocol_scheme">fb466196183759778</string>


    <!--Strings for Login page -->
    <string name="login_email_hint">"Email"</string>
    <string name="login_password_hint">"Password"</string>
    <string name="login_button_text">"Login"</string>
    <string name="singUp_text">"No Account yet? Sign Up"</string>
    <string name="forgot_password_text">"Forgot Password ?"</string>

    <!-- Drawer Toggle -->
    <string name="open_drawer_fallback">Open Drawer</string>
    <string name="close_drawer_fallback">Close Drawer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_maps">Map</string>

    <!--Strings for SignUP Page-->
    <string name="sign_up_name_hint">"UserName"</string>
    <string name="sign_up_first_name_hint">"FirstName"</string>
    <string name="sign_up_email_hint">"Email"</string>
    <string name="sign_up_phone_number_hint">"Phone Number"</string>
    <string name="sign_up_postal_address_hint">"Address"</string>
    <string name="sign_up_password_hint">"Password"</string>
    <string name="sign_up_confirm_password_hint">"Confirm Password"</string>
    <string name="sign_up_button_text">"Create Account"</string>
    <string name="err_msg_signup_name">"Please enter Name"</string>
    <string name="err_msg_signup_first_name">"Please enter First Name"</string>

    <string name="err_msg_signup_phone_number">"Enter valid number"</string>

    <string name="err_msg_signup_password">"Enter Password"</string>
    <string name="err_msg_signup_confirm_password">Password do not match</string>


    <!--Strings for Details Change-->
    <string name="username">"Username :"</string>
    <string name="phone">"Number :"</string>
    <string name="change_username_">"name"</string>
    <string name="change_phone">"phone"</string>
    <string name="save_details">Save</string>

    <!--String of ViewStatement-->
    <string name="Send_money">"Money Sent"</string>
    <string name="received_money">"Money Received"</string>

    <!--Maps View-->
    <string name="google_maps_key">AIzaSyDJcJ8o7YZ14BM3XIf35wnGNuv-lB8Nu_c</string>

</resources>
