<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_apply_now"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/apply_now" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/offers" />
        <item
            android:id="@+id/nav_near_me"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/near_me" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/support" />
    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/faq" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_downloads"
                android:icon="@drawable/ic_file_download_black_24dp"
                android:title="@string/downloads" />
        </menu>
    </item>

</menu>
