<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:focusableInTouchMode="true"
    android:background="@color/sign_up_page_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/login_email_input_layout"
        android:background="@drawable/login_edit_text_background"
        android:layout_marginBottom="8dp">
    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sign_up_name_hint"
        android:inputType="textPersonName"
         />
    </android.support.design.widget.TextInputLayout>
    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sign_up_first_name_hint"
        android:inputType="textPersonName"
        />

    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/user_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/sign_up_phone_number_hint"/>

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:ems="10"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_password_hint"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/user_confirm_password"
        android:layout_width="match_parent"
        android:ems="10"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_confirm_password_hint"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_button"
        android:layout_marginTop="10dp"
        android:background="@drawable/create_account_button_background"
        android:text="@string/sign_up_button_text"/>

</LinearLayout>