<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:text="@string/username"
        android:textSize="20sp"
        android:textStyle="bold"
   />
        <EditText
            android:id="@+id/change_username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/change_username_"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/phone"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    <EditText
        android:id="@+id/change_phonenumber_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
            android:layout_marginLeft="10dp"
        android:maxLength="10"
        android:inputType="phone"
        android:text="@string/change_phone"

       />

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/create_account_button_background"
        android:layout_marginTop="57dp"
        android:text="@string/save_details" />
</LinearLayout>