<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:focusableInTouchMode="true"
    android:background="@color/login_page_background"
    android:paddingRight="24dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/login_email_input_layout"
        android:background="@drawable/login_edit_text_background"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/login_email_hint" />
    </android.support.design.widget.TextInputLayout>
    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/login_password_input_layout"
        android:background="@drawable/login_edit_text_background"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_password_hint"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/forgot_password_text_color"
        android:text="@string/forgot_password_text"
        android:gravity="end"
        android:textSize="15dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/login_page_button_text"
        android:id="@+id/login_button"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_button_background"
        android:text="@string/login_button_text"/>
    <TextView
        android:id="@+id/signUp_link"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/sign_up_link_color"
        android:text="@string/singUp_text"
        android:textSize="15dp"/>
    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />


</LinearLayout>