<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/login_page_background"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#fff"
        android:text="kfjhffhf"
        android:id="@+id/slid"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="Call Friends"
        android:textColor="#fff"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/call_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="10"
            android:inputType="phone"
            android:hint="@string/sign_up_phone_number_hint"
            />

        <ImageButton
            android:id="@+id/callButton"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/sym_action_call" />
    </LinearLayout>
    <Button
        android:id="@+id/check_balance"
        android:layout_margin="20dp"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="@string/check_balance"
        />

    <Button
        android:id="@+id/view_statement"
        android:layout_width="300dp"
        android:layout_margin="20dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="@string/view_statement" />

    <Button
        android:id="@+id/transfer_balance"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="@string/make_transaction" />

</LinearLayout>